# xgandalf

./: .clang-format  .gdbinit  .gitconfig  .gitignore  .project  CMakeLists.txt  CMakeSettings.json.example  INSTALL  notes.txt  xgandalf.pc.in
Algorithm documentation/: lattice refinement meanSquaredDist.txt  lattice refinement.mw
cmake/: FindMKL.cmake
include/: BadInputException.h  CustomException.h  Dbscan.h  DetectorToReciprocalSpaceTransform.h  ExperimentSettings.h  HillClimbingOptimizer.h  Indexer.h  IndexerAutocorrPrefit.h  IndexerBase.h  IndexerPlain.h  InverseSpaceTransform.h  Lattice.h  LatticeAssembler.h  ReciprocalSpaceTranslation.h  ReciprocalToRealProjection.h  SamplePointsGenerator.h  SimpleDiffractionPatternPrediction.h  SimpleMonochromaticDiffractionPatternPrediction.h  SimpleMonochromaticProjection.h  SimpleProjection.h  SparsePeakFinder.h  WrongUsageException.h  eigenDiskImport.h  eigenSTLContainers.h  experimentSettings.h  pointAutocorrelation.h  refinement.h  samplePointsFiltering.h  tests.h
include/adaptions/crystfel/: ExperimentSettings.h  IndexerPlain.h  Lattice.h  SimpleDiffractionPatternPrediction.h  SimpleMonochromaticDiffractionPatternPrediction.h  indexerData.h  projectionData.h
include/adaptions/onda/: Xgandalf.pyx  onda hints.txt  xgandalf_cpp.pxd  xgandalf_cpp_extension.pxd  xgandalf_extension.pyx
precomputedSamplePoints/: pitch0.12_tolerance0  pitch0.12_tolerance0.005  pitch0.12_tolerance0.01  pitch0.12_tolerance0.02  pitch0.12_tolerance0.03  pitch0.12_tolerance0.04  pitch0.14_tolerance0  pitch0.14_tolerance0.005  pitch0.14_tolerance0.01  pitch0.14_tolerance0.02  pitch0.14_tolerance0.03  pitch0.14_tolerance0.04  pitch0.16_tolerance0  pitch0.16_tolerance0.005  pitch0.16_tolerance0.01  pitch0.16_tolerance0.02  pitch0.16_tolerance0.03  pitch0.16_tolerance0.04  pitch0.18_tolerance0  pitch0.18_tolerance0.005  pitch0.18_tolerance0.01  pitch0.18_tolerance0.02  pitch0.18_tolerance0.03  pitch0.18_tolerance0.04  pitch0.1_tolerance0  pitch0.1_tolerance0.005  pitch0.1_tolerance0.01  pitch0.1_tolerance0.02  pitch0.1_tolerance0.03  pitch0.1_tolerance0.04  pitch0.2_tolerance0  pitch0.2_tolerance0.005  pitch0.2_tolerance0.01  pitch0.2_tolerance0.02  pitch0.2_tolerance0.03  pitch0.2_tolerance0.04  pitches  pointsOnSphericalShell_generationScript.m  tolerances
src/: Dbscan.cpp  DetectorToReciprocalSpaceTransform.cpp  ExperimentSettings.cpp  HillClimbingOptimizer.cpp  Indexer.cpp  IndexerAutocorrPrefit.cpp  IndexerBase.cpp  IndexerPlain.cpp  InverseSpaceTransform.cpp  Lattice.cpp  LatticeAssembler.cpp  ReciprocalSpaceTranslation.cpp  ReciprocalToRealProjection.cpp  SamplePointsGenerator.cpp  SimpleDiffractionPatternPrediction.cpp  SimpleMonochromaticDiffractionPatternPrediction.cpp  SimpleMonochromaticProjection.cpp  SimpleProjection.cpp  SparsePeakFinder.cpp  experimentSettings.cpp  indexer.cpp  main.cpp  pointAutocorrelation.cpp  refinement.cpp  samplePointsFiltering.cpp  simpleMonochromaticDiffractionPatternPrediction.cpp  tests.cpp
src/adaptions/crystfel/: ExperimentSettings.cpp  IndexerPlain.cpp  SimpleDiffractionPatternPrediction.cpp  SimpleMonochromaticDiffractionPatternPrediction.cpp  indexerData.cpp  lattice.cpp  projectionData.cpp
workfolder/: closeToPeaksCount  lastInverseTransformEvaluation  optimizedPoints  positionsToOptimize_init  positionsToTransform  tmp
